--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "charger",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js Rest Api for charging station system with Express, Sequalize & MySQL",
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
-  "keywords": [],
+  "keywords": [
+    "nodejs",
+    "express",
+    "rest",
+    "api",
+    "sequalize",
+    "mysql"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
-    "pg": "^8.11.3",
-    "sequelize": "^6.35.1",
-    "sequelize-typescript": "^2.1.6"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.1",
+    "@types/node": "^20.10.2",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "typescript": "^5.3.2"
