--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_NAME='charger',
+DB_NAME=charger
 PORT=8080
-DB_USER='root'
-DB_PASSWORD='Qwerty1@'
+DB_USER=root
+DB_PASSWORD=Qwerty1@
 DB_PORT=3306
-DB_HOST='localhost'
+DB_HOST=localhost
