--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "migration:show": "npm typeorm migration:show",
+    "migration:create": "node scripts/migration-create.js",
+    "migration:revert": "npm typeorm migration:revert"
   },
   "keywords": [
     "nodejs",
@@ -24,7 +27,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
