--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
+    "test": "jest --coverage",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "migration:show": "npm typeorm migration:show",
-    "migration:create": "node scripts/migration-create.js",
-    "migration:revert": "npm typeorm migration:revert"
+    "dev": "nodemon  ./src/index.ts "
   },
   "keywords": [
     "nodejs",
@@ -27,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
@@ -37,10 +36,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.2",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
   }
 }
