--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "redis-server": "^1.2.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
     "yargs": "^17.7.2"
